cc_library(
    name = "system",
    srcs = [
        "system.cc",
    ],
    hdrs = [
        "scheduler.h",
        "system.h",
        "task.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hal/board",
        "//time:embedded_clock",
    ],
)

cc_library(
    name = "testing",
    testonly = True,
    hdrs = [
        "sample_tasks.h",
    ],
    deps = [
        ":system",
    ],
)

cc_test(
    name = "scheduler_test",
    srcs = ["scheduler_test.cc"],
    deps = [
        ":system",
        ":testing",
        "//hal/rcc",
        "//third_party/glog",
        "//third_party/gtest",
        "//time:simulation_clock",
    ],
)

cc_test(
    name = "task_test",
    srcs = ["task_test.cc"],
    deps = [
        ":system",
        ":testing",
        "//third_party/glog",
        "//third_party/gtest",
        "//time:simulation_clock",
    ],
)
