cc_library(
    name = "time_headers",
    hdrs = [
        "clock.h",
        "embedded_clock.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hal/power",
        "//hal/rcc",
        "//hal/systick",
        "//hal/timer",
    ],
)

cc_library(
    name = "time",
    srcs = [
        "embedded_clock.cc",
    ],
    target_compatible_with = select({
        "//platforms:teensyduino_core": [],
        "//platforms:stm32_core": [],
        "//platforms:std_cpp": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":time_headers",
        "//hal/board",
        "//hal/power",
        "//hal/rcc",
        "//hal/timer",
    ],
)

cc_library(
    name = "simulation_clock",
    hdrs = [
        "chrono_utils.h",
        "clockable.h",
        "mock_clock.h",
        "scaled_clock.h",
    ],
    target_compatible_with = [
        "//platforms:std_cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":time_headers",
    ],
)

cc_test(
    name = "mock_clock_test",
    srcs = [
        "mock_clock_test.cc",
    ],
    deps = [
        ":simulation_clock",
        "//third_party/gtest",
    ],
)
