cc_library(
    name = "embedded_clock",
    srcs = [
        "embedded_clock.cc",
    ],
    hdrs = [
        "embedded_clock.h",
    ],
    target_compatible_with = select({
        "//platforms:teensyduino_core": [],
        "//platforms:stm32_core": [],
        "//platforms:std_cpp": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//hal",
        "//hal/board",
        "//hal/power",
        "//hal/rcc",
        "//hal/timer",
    ],
)

cc_library(
    name = "simulation_clock",
    hdrs = [
        "clockable.h",
        "mock_clock.h",
        "scaled_clock.h",
    ],
    target_compatible_with = [
        "//platforms:std_cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hal",
    ],
)

cc_test(
    name = "mock_clock_test",
    srcs = [
        "mock_clock_test.cc",
    ],
    deps = [
        ":simulation_clock",
        "//third_party/gtest",
    ],
)
