load("//platforms:hex.bzl", "hex")

cc_library(
    name = "spi",
    target_compatible_with = select({
        "//conditions:default": [
        ],
        "//platforms:no_spi": [
            "@platforms//:incompatible",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [":spi_header"] + select({
        "//platforms:teensyduino_spi": [
            ":teensyduino_spi",
        ],
        "//platforms:spidev_spi": [
            ":spidev_spi",
        ],
    }),
)

cc_library(
    name = "spi_header",
    srcs = [
        "spi.cc",
    ],
    hdrs = [
        "spi.h",
    ],
)

cc_library(
    name = "teensyduino_spi",
    srcs = [
        "teensyduino_spi.cc",
    ],
    target_compatible_with = select({
        "//platforms:teensyduino_spi": [
        ],
        "//conditions:default": [
            "@platforms//:incompatible",
        ],
    }),
    deps = [
        ":spi_header",
        "//bus/gpio",
        "//third_party/arduino:core",
        "//third_party/arduino:spi",
    ],
)

cc_library(
    name = "spidev_spi",
    srcs = [
        "spidev_spi.cc",
    ],
    target_compatible_with = select({
        "//platforms:spidev_spi": [
        ],
        "//conditions:default": [
            "@platforms//:incompatible",
        ],
    }),
    deps = [
        ":spi_header",
        "//base",
        "//third_party/arduino/wiring_pi",
        "//third_party/glog",
    ],
)
